bootstrap/kubernetes/apps/security/external-secrets/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    name: security
